package(default_visibility = ["//visibility:public"])

filegroup(
    name = "empty",
    srcs = [],
    visibility = ["//visibility:public"],
)

toolchain_type(
  name="odrazel_toolchain_gcc_ext_type",
  visibility=["//visibility:public"]
)

# toolchain config
load(":config.bzl", "odrazel_toolchain_config_gcc_ext_new")
odrazel_toolchain_config_gcc_ext_new(
  name = "odrazel_toolchain_config_gcc_ext"
)

cc_toolchain(
    name = "odrazel_toolchain_gcc_ext_impl",
    toolchain_identifier = "odrazel_toolchain_gcc_ext",
    toolchain_config = ":odrazel_toolchain_config_gcc_ext",
    all_files = ":empty",
    compiler_files = ":empty",
    dwp_files = ":empty",
    linker_files = ":empty",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 0,
)

# initalize toolchain
toolchain(
  name = "odrazel_toolchain_gcc_ext",
  toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
  toolchain = ":odrazel_toolchain_gcc_ext_impl",
)
